Tested command line argument processing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,8 @@ project(Arbor)
 set(CXX_STANDARD 20)
 set(CXX_STANDARD_REQUIRED true)
 
+add_subdirectory(src/Preprocessor)
 add_subdirectory(testing)
+
+enable_testing()
+add_test(NAME command_line_arguments_test COMMAND testing/command_line_arguments)
