--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CMAKE_MINIMUM_REQUIRED VERSION 3.20.0)
+cmake_minimum_required(VERSION 3.20.0)
 project(Arbor C CXX)
 
 set(CXX_STANDARD 17)
@@ -9,7 +9,7 @@ set(ARBOR_MIN_VERSION 1)
 set(ARBOR_PATCH_VERSION 0)
 
 # Libraries containing compiled code of compiler parts
-add_executable(Arbor src/Arbor.cpp)
+add_subdirectory(src)
 
 
 # Unit tests (done with Google Test)
