Updated lexer (no longer using Flex)

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -7,10 +7,28 @@ FetchContent_Declare(
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
-add_executable(command_args_test test_command_args.cpp)
-target_link_libraries(command_args_test PRIVATE FrontEnd)
-target_link_libraries(command_args_test PRIVATE gtest_main)
-target_compile_options(command_args_test PRIVATE "-g")
+set(CURR_TEST command_args_test)
+set(TEST_LIST ${CURR_TEST})
+add_executable(${CURR_TEST} test_command_args.cpp)
+target_link_libraries(${CURR_TEST} PRIVATE FrontEnd)
+target_link_libraries(${CURR_TEST} PRIVATE gtest_main)
+target_compile_options(${CURR_TEST} PRIVATE "-g")
+
+set(CURR_TEST preprocessor_test)
+set(TEST_LIST ${TEST_LIST} ${CURR_TEST})
+add_executable(${CURR_TEST} test_preprocessor.cpp)
+target_link_libraries(${CURR_TEST} PRIVATE FrontEnd)
+target_link_libraries(${CURR_TEST} PRIVATE gtest_main)
+target_compile_options(${CURR_TEST} PRIVATE "-g")
+
+set(CURR_TEST lexer_test)
+set(TEST_LIST ${TEST_LIST} ${CURR_TEST})
+add_executable(${CURR_TEST} test_lexer.cpp)
+target_link_libraries(${CURR_TEST} PRIVATE FrontEnd)
+target_link_libraries(${CURR_TEST} PRIVATE gtest_main)
+target_compile_options(${CURR_TEST} PRIVATE "-g")
 
 include(GoogleTest)
-gtest_discover_tests(command_args_test)
+foreach(TEST ${TEST_LIST})
+    gtest_discover_tests(${TEST})
+endforeach(TEST in ${TEST_LIST})
