--- a/src/FrontEnd/CMakeLists.txt
+++ b/src/FrontEnd/CMakeLists.txt
@@ -1,3 +1,4 @@
-set(FE_SOURCES command_args.cpp)
+set(FE_SOURCES command_args.cpp preprocessor.cpp lexer.cpp)
 
 add_library(FrontEnd ${FE_SOURCES})
+target_compile_options(FrontEnd PUBLIC "-g")
